@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -40,7 +40,7 @@ public class DebugPlugin extends Plugin {
 
     @Override
     public List<String> getCustomizationURIs() {
-        return Arrays.asList("http://jaxb.dev.java.net/test");
+        return List.of("http://jaxb.dev.java.net/test");
     }
 
     @Override
